syntax = "proto3";

option csharp_namespace = "GrpcServiceMessage";

service MessageBroker {
    rpc Publish(PublishRequest) returns (PublishReply);
    rpc Subscribe(SubscribeRequest) returns (stream Message);
    rpc GetTopics (Empty) returns (TopicList);
}

message PublishRequest {
    string topic = 1;
    string message = 2;
    string idPublish= 3;
}

message PublishReply {
    string status = 1;
}

message SubscribeRequest {
    string topic = 1;
}

message Message {
    string topic = 1;
    string message = 2;
    string content = 3;
}
message Empty {}

message TopicList {
    repeated string topics = 1;
}